# crUPto

./: .gitignore  CHANGELOG.md  LICENSE  README.md  crUPto.py  pyproject.toml
.github/: copilot-instructions.md
.github/copilot-instructions.d/: building_examples_policy.md  building_exemplar.md  building_tests_policy.md  cli_menu_patterns.md  colour_key_usage.md  documentation_guidelines.md  logging_policy.md  root_modes_workspace_project_paths.md  tuilkit_enabled_apps_guidelines.md  tuilkit_imports.md  version_bumping.md
config/: crUPto_CONFIG.json  crUPto_CONFIG.json.bak  crUPto_MAPPING.json
docs/: CHANGELOG.md  DICT_COLOURS.reference.txt  PDF_SUPPORT.md  README.md
examples/: TESTS_CONFIG.py  exemplar.py  test_paths.json
src/crUPto/: __init__.py  cli.py  main.py  processing.py  reporting.py  validation.py  verify_mapping.py
src/crUPto/proc/: calc.py  data.py  wallet.py
src/crUPto/ui/: __init__.py  status_table.py
src/crUPto/utils/: path_utils.py
tests/: test_colour_config_resolution.py  test_path_utils_root_modes.py  test_tuilkit_root_resolution.py
tests/ui/: test_status_table.py
